5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1811_2563.log
== TEST (2019-06-06 19:03:12) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i>=5):
			AP=AP+1
		if(i<7):
			AP=AP+1
	print(size(vet))
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:03:29) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i>=5):
			AP=AP+1
		if(i<7):
			AP=AP+1
	print(size(vet))
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:05:25) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			
   print(size(vet))
	print(vet)



	
	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
File "XXXX", line 10
    print(size(vet))
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:05:35) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			
print(size(vet))
	print(vet)



	
	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
File "XXXX", line 10
    print(size(vet))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:06:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			

	print(vet)



	
	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
File "XXXX", line 11
    print(vet)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:07:57) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
		AP=AP+1
	
	print(vet)
	print(size(vet))

	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
File "XXXX", line 9
    AP=AP+1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:08:17) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			AP=AP+1
	
	print(vet)
	print(size(vet))

	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:08:47) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			AP=AP+1
	
	print(vet)
	print(size(vet))

	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:09:14) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			AP=AP+1
	   if(i>=5):
			AP=AP+1
	print(vet)
	print(size(vet))

	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
File "XXXX", line 10
    if(i>=5):
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:09:52) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			AP=AP+1
	   if(i>=5):
			AP=AP+1
	print(vet)
	print(size(vet))

	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
File "XXXX", line 10
    if(i>=5):
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:10:50) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet)<=7):
	AP=0
	
	for i in vet:
		if(i<7):
			AP=AP+1
	   if(i>=5):
			AP=AP+1
	print(vet)
	print(size(vet))

	vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
File "XXXX", line 10
    if(i>=5):
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:19:16) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	ap=0
	for i in vet:
		if(i>=5) and (i<7):
			ap=ap+1
	print(ap)
	vet = array(eval(input("Primeiro vetor: ")))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:20:07) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	ap=0
	for i in vet:
		if(i>=5) and (i<7):
			ap=ap+1
	print(ap)
	vet = array(eval(input("Primeiro vetor: ")))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:20:07) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	ap=0
	for i in vet:
		if(i>=5) and (i<7):
			ap=ap+1
	print(ap)
	vet = array(eval(input("Primeiro vetor: ")))
	
	
-- EXECUTION TIME:
1.13597
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Primeiro vetor: 5
Primeiro vetor: 3
Primeiro vetor:
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:44) 
-- CODE:
from numpy import*
vet=array(eval(input("Primeiro vetor: ")))
ap=0
while(size(vet)>1):
	for i in vet:
		if(i>=5) and (i<7):
			ap=ap+1
	print(ap)
	vet=array(eval(input("Primeiro vetor: ")))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:23:25) 
-- CODE:
from numpy import*
vet=array(eval(input("Primeiro vetor: ")))
ap=0
while(size(vet)>1):
	for i in vet:
		if(i>=5) and (i<7):
			ap=ap+1
	print(ap)
	ap = 0
	vet=array(eval(input("Primeiro vetor: ")))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:24:07) 
-- CODE:
from numpy import*
vet=array(eval(input("Primeiro vetor: ")))
ap=0
while(size(vet)>1):
	for i in vet:
		if(i>=5) and (i<7):
			ap=ap+1
	print(ap)
	ap = 0
	vet=array(eval(input("Primeiro vetor: ")))
	
	
-- EXECUTION TIME:
1.20934
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
